samples/test_ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ingress-envoy
spec:
  controller: networking.k8s.io/ingress-envoy-controller
