samples/test_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    envoy.ingress.kubernetes.io/rewrite-target: "/get"
spec:
  ingressClassName: ingress-envoy
  tls:
  - hosts:
      - localhost
    secretName: certname
  rules:
  - http:
      paths:
      - backend:
          service:
            name: httpbin
            port:
              number: 80
        path: /Ingress_HTTP
        pathType: ImplementationSpecific
